--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "eslint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.79.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "next": "15.5.2",
-    "openai": "^5.16.0",
+    "next-themes": "^0.4.6",
+    "openai": "^5.23.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "resend": "^6.1.0",
+    "recharts": "^3.2.1",
+    "resend": "^6.4.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
