--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
-    "next": "15.5.2",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "openai": "^5.23.2",
     "react": "19.1.0",
