--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
     "resend": "^6.4.1",
+    "stripe": "^20.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
